--- a/solicitarTurno.html
+++ b/solicitarTurno.html
@@ -106,10 +106,10 @@
 </head>
 <body>
     <div class="container">
-        <img src="/api/placeholder/200/60" alt="Logo Coomeva" class="logo">
+        <img src="https://play.google.com/store/apps/details?id=co.com.coomeva.micoomeva&hl=es_GT" alt="Logo Coomeva" class="logo">
         <h1>Solicita tu turno fácilmente</h1>
         <p>Agenda tus citas médicas de manera rápida y segura a través de la App Coomeva</p>
-        <img src="/api/placeholder/280/200" alt="App Coomeva" class="app-image">
+        <img src="https://play.google.com/store/apps/details?id=co.com.coomeva.micoomeva&hl=es_GT" alt="App Coomeva" class="app-image">
         <a href="miCoomeva://miticodev.com:8081/tabs/tab2/solicitar-turno" class="btn-turno">
             Solicitar Turno Ahora
         </a>
