--- a/solicitarTurno.html
+++ b/solicitarTurno.html
@@ -36,7 +36,7 @@
         }
 
         .logo {
-            width: 200px;
+            width: 100px;
             height: auto;
             margin-bottom: 1.5rem;
         }
@@ -106,10 +106,9 @@
 </head>
 <body>
     <div class="container">
-        <img src="/api/placeholder/200/60" alt="Logo Coomeva" class="logo">
+        <img src="https://play-lh.googleusercontent.com/e2muvRpZI6dg3zqKlAGjA-p5PktmezKkUmh2YMIsker4Np2rXCo2ZVELTcQvdjMog_o" alt="Logo Coomeva" class="logo">
         <h1>Solicita tu turno fácilmente</h1>
         <p>Agenda tus citas médicas de manera rápida y segura a través de la App Coomeva</p>
-        <img src="/api/placeholder/280/200" alt="App Coomeva" class="app-image">
         <a href="miCoomeva://miticodev.com:8081/tabs/tab2/solicitar-turno" class="btn-turno">
             Solicitar Turno Ahora
         </a>
