--- a/solicitarTurno.html
+++ b/solicitarTurno.html
@@ -108,7 +108,7 @@
     <div class="container">
         <img src="https://play-lh.googleusercontent.com/e2muvRpZI6dg3zqKlAGjA-p5PktmezKkUmh2YMIsker4Np2rXCo2ZVELTcQvdjMog_o" alt="Logo Coomeva" class="logo">
         <h1>Solicita tu turno fácilmente</h1>
-        <p>Agenda tus citas médicas de manera rápida y segura a través de la App Coomeva</p>
+        <p>Agenda de manera rápida y segura a través de la app mi Coomeva</p>
         <a href="miCoomeva://miticodev.com:8081/tabs/tab2/solicitar-turno" class="btn-turno">
             Solicitar Turno Ahora
         </a>
